tests/latch/static/failing/guiicons.wat
version https://git-lfs.github.com/spec/v1
oid sha256:e5bd09091d10399da53b18fa827f3f0a4855659fe6f0c1faa4c9ba8bc692b497
size 4429683
